# merit

./: .cvsignore  ChangeLog  Makefile.am  SConscript  acinclude.m4  autogen  configure.in  merit.spec.in  meritLib.py
cmt/: .cvsignore  requirements
doc/: 2 Merit Ntuple.html  log-fastFilter.txt  release.notes
merit/: AnalysisList.h  Analyze.h  BackgroundCuts.h  Cut.h  EnergyAnalysis.h  LayerGroup.h  Level1.h  MultiPSF.h  PSFanalysis.h  RebinHist.h  Resolution.h  Statistic.h
src/: .cvsignore  AnalysisList.cxx  AnalysisList.h  Analyze.cxx  Analyze.h  BackgroundCuts.cxx  BackgroundCuts.h  ClassificationTree.cxx  ClassificationTree.h  Cut.cxx  Cut.h  EnergyAnalysis.cxx  EnergyAnalysis.h  FigureOfMerit.cxx  FigureOfMerit.h  LayerGroup.cxx  LayerGroup.h  Level1.cxx  MultiPSF.cxx  MultiPSF.h  PSFRootFit.cxx  PSFRootFit.h  PSFanalysis.cxx  PSFanalysis.h  PSFtailCuts.cxx  PSFtailCuts.h  PruneTree.cxx  PruneTree.h  Statistic.cxx  mainpage.h
src/Dll/: merit_dll.cxx  merit_load.cxx
src/analysis/: Histogram.cxx  Histogram.h  RebinHist.cxx  RebinHist.h  Tuple.cxx  Tuple.h  TupleTitle.cxx  TupleTitle.h  smplstat.cxx  smplstat.h
src/app/: AsciiTuple.cxx  AsciiTuple.h  MeritTuple.h  RootTuple.cxx  RootTuple.h  fastFilter.cxx  meritapp.cxx  run_classification_main.cxx  write_text_main.cxx
src/meritAlg/: ClassifyAlg.cxx  FT1Alg.cxx  GaudiTuple.cxx  GaudiTuple.h  MeritRootTuple.cxx  MeritRootTuple.h  TkrVtxCutVals.cxx  TkrVtxCutVals.h  meritAlg.cxx
src/root/: MeritCint.cxx  MeritLinkDef.h  MeritPlots.cxx  MeritPlots.h  dorootcint.bat  meritFoM.cxx  meritFoM.h  meritcint.cxx  meritcint.h
src/root/rootApp/: rootApp.cxx
src/test/: GaudiMain.cxx  aoRecon.root  jobOptions.txt  merit100.root  tuple50k.root
xml/: CTPruner_DC1.imw  classification.imw
