dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.5 $)

AC_INIT(src/AnalysisList.cxx)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(merit, 1.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CXX

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Check for location of installed GLAST libraries
AC_ARG_WITH(glast, --with-glast=DIR (path to GLAST libraries),
	glast_prefix=$withval, glast_prefix="/usr/local/glast")
AC_SUBST(glast_prefix)
AC_MSG_RESULT( GLAST installation at $glast_prefix assumed)

dnl Check that it is really there
AC_CHECK_PROG(MERIT, merit, merit, no, $glast_prefix/bin)
if test "$MERIT" = no; then
   AC_MSG_WARN([GLAST installation not found in $glast_prefix
])
fi

dnl Look for libanalysis
glast_HAVE_ANALYSIS

AC_OUTPUT(Makefile src/Makefile)


AC_MSG_RESULT([]
	Merit program now configured.
])

