dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.10 $)

AC_INIT(src/AnalysisList.cxx)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(merit, 1.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CXX

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Check for location of installed GLAST libraries
AC_ARG_WITH(glast, --with-glast=DIR (path to GLAST libraries),
		   gl_with_glast=$withval, gl_with_glast=no )
	if test x"$gl_with_glast" != xno ; then
	    glast_prefix=$gl_with_glast
	fi
AC_SUBST(glast_prefix)
AC_MSG_RESULT( GLAST installation at $glast_prefix assumed)

dnl Check that it is really there
AC_CHECK_PROG(MERIT, merit, merit, no, $glast_prefix/bin)
if test "$MERIT" = no; then
   AC_MSG_WARN([GLAST installation not found in $glast_prefix
])
fi

dnl Look for required libraries
glast_CHECK_LIB_SRC(LIB_ANALYSIS, libanalysis.la, ../analysis)

AC_OUTPUT(Makefile merit.spec src/Makefile)


AC_MSG_RESULT([
	Merit program now configured.
])



