dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.11 $)

AC_INIT(src/AnalysisList.cxx)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(merit, 1.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CXX

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Look for GLAST installation
glast_CHECK_ROOT

dnl Look for required libraries
glast_CHECK_LIB_SRC(LIB_ANALYSIS, libanalysis.la, ../analysis)

AC_OUTPUT(Makefile merit.spec src/Makefile)


AC_MSG_RESULT([
	Merit program now configured.
])



